# napari-pdr-reader

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_pdr_reader/: __init__.py  _reader.py  _sample_data.py  napari.yaml
src/napari_pdr_reader/_tests/: test_reader.py  test_sample_data.py
