[metadata]
name = napari-pdr-reader
version = 0.0.1
description = A reader plugin for Napari for PDS data powered by the PDR library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndrewAnnex/napari-pdr-reader
author = Dr. Andrew Annex
author_email = ama6fy@virginia.edu
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/AndrewAnnex/napari-pdr-reader/issues
    Documentation = https://github.com/AndrewAnnex/napari-pdr-reader#README.md
    Source Code = https://github.com/AndrewAnnex/napari-pdr-reader
    User Support = https://github.com/AndrewAnnex/napari-pdr-reader/issues

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-pdr-reader = napari_pdr_reader:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
